recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: forward reference extends over definition of variable x
	var x=steps+incre
                    ^