recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {	
	 
	var x=steps+incre
	var incre = increment
	
	avance(x)
	gauche(angle)
	var taille = length+incre
	
	if (length == 75){
	 	return
	 }
	 else
	 
	 {
	 	spiral(x, 90, taille, 5)
	 }
}

